Snapped Cherries